<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_description">Mod SystemUI.apk for Xperia. Tap here to configure settings.</string>
    <string name="statusbar">Statusbar</string>
    <string name="label_brigi">Brighten status bar icon</string>
    <string name="sum_brigi">Disable Automatic dimming.</string>
    <string name="label_bigi">Enlarge status bar icon</string>
    <string name="sum_bigi">Disable Automatic dimming.</string>
    <string name="label_tranz1">Fix transparent status bar</string>
    <string name="sum_tranz1">Disable black layer on status bar. DO NOT enable on 4.4 or later.</string>
    <string name="label_nosim">Hide No SIM icon</string>
    <string name="sum_nosim">Hide No SIM icon when you have no SIM.</string>
    <string name="quick">Notification &#38; Quick Settings</string>
    <string name="label_dataw">Change notif. header button to transparent</string>
    <string name="sum_dataw">Make notification header button transparent.</string>
    <string name="label_tranz144">Change quick settings</string>
    <string name="sum_tranz144">Change the number of tiles in a row and unlimited items in quick settings.</string>
    <string name="label_notab">Hide tabs</string>
    <string name="sum_notab">Hide notification and quick settings tab.</string>
    <string name="label_movequick">Move quick settings to notification tab</string>
    <string name="sum_movequick">Move quick settings tiles to notification tab and hide tabs. Use this option if you are using Z2 style SystemUI.</string>
    <string name="label_transjpn">Fix Japanese translations</string>
    <string name="sum_transjpn">Fix Japanese translation for quick settings.</string>
    <string name="label_heighttool">Change quicik settings height</string>
    <string name="sum_heighttool">Change quick settings height. Use this option if you are using Z2 style SystemUI.</string>
    <string name="label_heightnum">Quicik settings height (dp)</string>
    <string name="sum_heightnum">Default is 100.0</string>
    <string name="label_heighttoolz3">Change quicik settings width (for Z3 style)</string>
    <string name="sum_heighttoolz3">Change quick settings width. Use this option if you are using Xperia Z3 style SystemUI.</string>
    <string name="label_widthz3">Quicik settings width (px)</string>
    <string name="sum_widthz3">Default width is 270px (90dip for xxhdpi device)</string>
    <string name="label_lineheight">Border height (dp)</string>
    <string name="sum_lineheight">Default is 0.8</string>
    <string name="misc">Misc</string>
    <string name="label_fullalert">Change battery charged alert level</string>
    <string name="sum_fullalert">Change battery level for battery charged alert. Check "Play sound when battery is full" in Accessibility settings.</string>
    <string name="fullalert_title">Battery level (0 - 100)</string>
    <string name="fullalert_summary">Default value is 100 (fully charged)</string>
    <string name="label_rebootaf">Note</string>
    <string name="nosum">You may need to reboot for changes to take effect.</string>
    <string name="mesum">"@WedyDQ10"</string>
    <string name="list_title">The number of tiles</string>
    <string name="list_summary">Specify the number of tiles to show in a row of the quick settings. Enable Change quick settings first.</string>
    <string name="list_dialogtitle">Number</string>
</resources>
